--- a/static/iconfont/iconfont.wxss
+++ b/static/iconfont/iconfont.wxss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2913101 */
-  src: url('//at.alicdn.com/t/font_2913101_53vzhbr4sni.woff2?t=1636007532178') format('woff2'),
-       url('//at.alicdn.com/t/font_2913101_53vzhbr4sni.woff?t=1636007532178') format('woff'),
-       url('//at.alicdn.com/t/font_2913101_53vzhbr4sni.ttf?t=1636007532178') format('truetype');
+  src: url('//at.alicdn.com/t/font_2913101_e69yl3vho3.woff2?t=1637984629028') format('woff2'),
+       url('//at.alicdn.com/t/font_2913101_e69yl3vho3.woff?t=1637984629028') format('woff'),
+       url('//at.alicdn.com/t/font_2913101_e69yl3vho3.ttf?t=1637984629028') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,16 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-dianzan_kuai:before {
+  content: "\ec8c";
+  color: rgb(122, 122, 122);
+}
+
+.icon-dianzan_kuai-copy:before {
+  content: "\ec8d";
+  color: #ff0000;
 }
 
 .icon-youjiantou:before {
