--- a/pages/luntan/goods-info/goods-info.wxml
+++ b/pages/luntan/goods-info/goods-info.wxml
@@ -1,3 +1,2 @@
-<view class="page">
-     <span>尚未完善</span>
- </view>
+<!--pages/luntan/goods-info/goods-info.wxml-->
+<text>pages/luntan/goods-info/goods-info.wxml</text>
