--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -24,7 +24,7 @@
 </view>  
 
 <view class="user_content" >
-    <navigator url="/pages/file/index" >
+    <navigator url="/pages/me/file/index" >
         <view class="user_information">
             <view class="iconfont icon-geren" >健康档案</view>
             <view class="info_arrow"> </view>
@@ -32,21 +32,23 @@
         
     </navigator>
  
-    <navigator url="/pages/record/index" >
+    <navigator url="/pages/me/record/index" >
         <view class="user_record">
             <view class="iconfont icon-jilu1" >诊断记录</view>
             <view class="re_arrow"> </view>
         </view>       
     </navigator>
     
-    <navigator url="/pages/aboutus/index" >
+
+    <!-- about us这里貌似没有 -->
+    <navigator url="/pages/me/aboutus/index" >
         <view class="user_aboutus">
             <view class="iconfont icon-guanyu" >关于我们</view>
             <view class="us_arrow"> </view>
         </view>       
     </navigator>
 
-    <navigator url="/pages/help/index" >
+    <navigator url="/pages/me/help/index" >
         <view class="user_help">
             <view class="iconfont icon-bangzhu" >帮助与反馈</view>
             <view class="help_arrow"> </view>
