--- a/pages/luntan/searchbar/searchbar.wxss
+++ b/pages/luntan/searchbar/searchbar.wxss
@@ -78,3 +78,13 @@
   border-radius: 46rpx;
   margin: 16rpx 20rpx;
 }
+.deleteHistory{
+  font-size: 30rpx;
+  height: 50rpx;
+  line-height: 50rpx;
+  color: #888;
+  background: #f5f5f5;    
+  padding: 6rpx 14rpx;
+  border-radius: 46rpx;
+
+}
