--- a/pages/me/record/index.wxml
+++ b/pages/me/record/index.wxml
@@ -1,2 +1,28 @@
-<!--pages/record/index.wxml-->
-<text>pages/record/index.wxml</text>
+<view class="weui-search-bar"> 
+            <view class="weui-search-bar__form">
+            <!-- 搜索框 -->
+                <view class="weui-search-bar__box">
+                    <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
+                    <input type="text" class="weui-search-bar__input" placeholder="请输入搜索内容"/>
+                </view>
+            </view>
+            <!-- 搜索按钮,调用搜索查询方法 -->
+            <view class="weui-search-bar__cancel-btn" bindtap='search'>搜索</view>
+</view>
+<!-- 档案 -->
+
+<!-- 列表 -->
+<scroll-view scroll-y="true">
+  <view class="floor"
+        wx:for="{{article_list}}"
+        wx:key="knoCardId"
+        data-index="{{item.knoCardId}}"
+        bindtap="toDetail">
+        <view class="picture">
+            <image class="img" src="{{item.knoCardIcon}}" mode="scaleToFill" />
+        </view>  
+        <view class="info">
+            <view class="info_title">{{item.knoCardTitle}}</view>
+        </view>  
+    </view>
+</scroll-view>
